Создано с помощью Colaboratory

--- a/Lab4/Part2/medium_game.ipynb
+++ b/Lab4/Part2/medium_game.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnUMi5Gr/ntThXwr6IfCUT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {
         "id": "rNgQAYdtfBKh"
       },
@@ -72,7 +71,7 @@
       "metadata": {
         "id": "BxhGQYa2fNr5"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -136,13 +135,12 @@
         "        ball['x'] = rightPaddle['x'] - rightPaddle['width']\n",
         "        ball['score'] += 1\n",
         "\n",
-        "    return 0\n",
-        ""
+        "    return 0\n"
       ],
       "metadata": {
         "id": "GMbFTg_0fVjF"
       },
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -174,7 +172,7 @@
       "metadata": {
         "id": "WHlnOg5ifXJd"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -208,15 +206,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBB7mB9ZfbG9",
-        "outputId": "ff14fb25-a4d8-46b6-e110-cf42804a94fc"
+        "outputId": "ccc45b0e-86e7-4d40-a920-8d4d0fb3024c"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "17.4 µs ± 5.13 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+            "18.1 µs ± 3.59 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
           ]
         }
       ]
@@ -231,27 +229,26 @@
         "def getAction(leftPaddle, rightPaddle, ball, W):\n",
         "    return (W.T.dot(get_features(leftPaddle, rightPaddle, ball))).argmax()\n",
         "\n",
-        "getAction(leftPaddle, rightPaddle, ball, get_one())\n",
-        ""
+        "getAction(leftPaddle, rightPaddle, ball, get_one())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yuXpPAx-fhBe",
-        "outputId": "37d6a03c-1c2f-4dda-8069-240ef39cd18c"
+        "outputId": "c3dd2317-9b18-473d-d487-f702aa9bd769"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
+              "4"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 6
         }
       ]
     },
@@ -281,13 +278,13 @@
       "metadata": {
         "id": "7dQT7bpmflJA"
       },
-      "execution_count": 18,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def mutate(W, mutation_rate=0.02):\n",
+        "def mutate(W, mutation_rate=0.06):\n",
         "    dW = get_one()\n",
         "    dM = get_one() > 0\n",
         "    return W + dW * dM * mutation_rate\n",
@@ -300,7 +297,7 @@
       "metadata": {
         "id": "_Hiem7GmfnZY"
       },
-      "execution_count": 19,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -356,7 +353,7 @@
       "metadata": {
         "id": "d0iH7YKkfpyF"
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -371,7 +368,7 @@
       "metadata": {
         "id": "fy5EvBnwfsBk"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -381,7 +378,7 @@
         "RANDOM_SIZE = 20\n",
         "ELITE_SIZE = 5\n",
         "NUM_GENERATIONS = 100\n",
-        "NUM_REPEATS = 3 # зачем?\n",
+        "NUM_REPEATS = 5 # зачем?\n",
         "NUM_RESTARTS = 5\n",
         "PATIENCE = lambda x: 1000*((x+2)//2)\n",
         "\n",
@@ -418,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1tlys_7sfu70",
-        "outputId": "2ef3fe87-9838-476f-ab8e-3483cc75df08"
+        "outputId": "88b9a088-77f3-4384-8922-3ae136b36fc4"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,36 +427,56 @@
             "Cтарт перезапуска №1\n",
             "Лучшая пока что: 0.0\n",
             "==================================================\n",
-            "Рестарт: 1\tПоколение: 0\tЗначение: 1.3\n",
+            "Рестарт: 1\tПоколение: 0\tЗначение: 1.4\n",
             "Рестарт: 1\tПоколение: 2\tЗначение: 2.0\n",
-            "Рестарт: 1\tПоколение: 5\tЗначение: 2.3\n",
-            "Рестарт: 1\tПоколение: 6\tЗначение: 2.7\n",
-            "Рестарт: 1\tПоколение: 7\tЗначение: 4.0\n",
-            "Рестарт: 1\tПоколение: 10\tЗначение: 6.0\n",
-            "Рестарт: 1\tПоколение: 13\tЗначение: 13.0\n",
-            "Рестарт: 1\tПоколение: 15\tЗначение: 23.7\n",
-            "Рестарт: 1\tПоколение: 18\tЗначение: 25.7\n",
-            "Рестарт: 1\tПоколение: 21\tЗначение: 38.7\n",
-            "Рестарт: 1\tПоколение: 60\tЗначение: 41.0\n",
+            "Рестарт: 1\tПоколение: 5\tЗначение: 2.4\n",
+            "Рестарт: 1\tПоколение: 9\tЗначение: 2.8\n",
+            "Рестарт: 1\tПоколение: 10\tЗначение: 4.0\n",
+            "Рестарт: 1\tПоколение: 26\tЗначение: 4.4\n",
+            "Рестарт: 1\tПоколение: 39\tЗначение: 4.6\n",
+            "Рестарт: 1\tПоколение: 52\tЗначение: 4.8\n",
             "==================================================\n",
             "Cтарт перезапуска №2\n",
-            "Лучшая пока что: 41.0\n",
+            "Лучшая пока что: 4.8\n",
             "==================================================\n",
+            "Рестарт: 2\tПоколение: 6\tЗначение: 6.0\n",
+            "Рестарт: 2\tПоколение: 7\tЗначение: 11.4\n",
+            "Рестарт: 2\tПоколение: 8\tЗначение: 29.8\n",
+            "Рестарт: 2\tПоколение: 9\tЗначение: 42.6\n",
+            "Рестарт: 2\tПоколение: 18\tЗначение: 59.2\n",
+            "Рестарт: 2\tПоколение: 21\tЗначение: 60.0\n",
+            "Рестарт: 2\tПоколение: 27\tЗначение: 67.6\n",
+            "Рестарт: 2\tПоколение: 75\tЗначение: 71.0\n",
+            "Рестарт: 2\tПоколение: 87\tЗначение: 71.2\n",
+            "Рестарт: 2\tПоколение: 88\tЗначение: 76.4\n",
             "==================================================\n",
             "Cтарт перезапуска №3\n",
-            "Лучшая пока что: 41.0\n",
+            "Лучшая пока что: 76.4\n",
             "==================================================\n",
             "==================================================\n",
             "Cтарт перезапуска №4\n",
-            "Лучшая пока что: 41.0\n",
+            "Лучшая пока что: 76.4\n",
             "==================================================\n",
             "==================================================\n",
             "Cтарт перезапуска №5\n",
-            "Лучшая пока что: 41.0\n",
+            "Лучшая пока что: 76.4\n",
             "==================================================\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('pingpong_weights.js', 'w') as f:\n",
+        "    f.write('var W = %s;\\n'%\n",
+        "            (json.dumps([[int(1e3*w)/1e3 for w in W] for W in best_thingey])))"
+      ],
+      "metadata": {
+        "id": "P-5olBZFOKFr"
+      },
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
